Fix z-index issues on tooltips and dropdown menus

--- a/style/components/drop.scss
+++ b/style/components/drop.scss
@@ -33,6 +33,7 @@
   border: solid 1px var(--border);
   border-radius: 6px;
   background: #fff;
+  z-index: 20;
 
   li {
     display: flex;
